[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Farid Ahmadian <ahmadian.farid.1988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1"
reqwest = "0.11"
lazy_static = "1"
tokio = { version = "1", features = ["full", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
